chore: java 17 pattern match switch 문을 사용하기 위한 설정 추가